--- a/OrchestratorWebApp/wwwroot/index.html
+++ b/OrchestratorWebApp/wwwroot/index.html
@@ -7,7 +7,11 @@
     <title>OrchestratorWebApp</title>
     <base href="/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/theme.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="OrchestratorWebApp.styles.css" rel="stylesheet" />
 </head>
